--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -56,6 +56,8 @@
     <Compile Include="PaddingTests.cs" />
     <Compile Include="RandomTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShellTests.cs" />
+    <Compile Include="StreamTests.cs" />
     <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
