--- a/helper-net/helper-net.csproj
+++ b/helper-net/helper-net.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayHelper.cs" />
+    <Compile Include="ShellHelper.cs" />
+    <Compile Include="StreamHelper.cs" />
     <Compile Include="ConversionHelper.cs" />
     <Compile Include="CryptoHelper.cs" />
     <Compile Include="PaddingHelper.cs" />
