--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,8 @@
 language: csharp
-sudo: false
-os:
- - linux
-mono:
-  - latest
+mono: none
+dotnet: 2.0.0
 solution: helper-net.sln
-install:
-  - nuget restore helper-net.sln
-  - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
+dist: trusty
 script:
-  - xbuild /p:Configuration=Debug helper-net.sln
-  - mono --runtime=v4.0 ./testrunner/NUnit.Runners.2.6.4/tools/nunit-console.exe ./Tests/bin/Debug/Tests.dll
+ - dotnet restore
+ - dotnet build -c Release
